--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta name="snap-audio-300-250" content="width=300,height=250" />
+		<script type="text/javascript">
+			var clickTag = "https://www.qualcomm.com/de/snapdragon#audio"
+		</script>
 		<style>
+			body,
+			html {
+				margin: 0;
+				padding: 0;
+			}
 			.sd-audio-300-250 {
 				width: 300px;
 				height: 250px;
@@ -59,7 +68,12 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 	</head>
 	<body>
-		<div class="sd-audio-300-250" width="300" height="250">
+		<a
+			href="javascript:window.open(window.clickTag)"
+			class="sd-audio-300-250"
+			width="300"
+			height="250"
+		>
 			<img class="top-text" src="assets/audio-300-250-top-text.png" alt="" />
 			<img
 				class="bottom-text"
@@ -76,7 +90,7 @@
 			/>
 			<img class="red-mat" src="assets/audio-300-250-blue-mat.png" alt="" />
 			<img class="image" src="assets/audio-300-250-image.jpg" alt="" />
-		</div>
+		</a>
 	</body>
 	<script>
 		const sdAudio300x250Animate = () => {
